# serpnex

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Link-Intelligence-Platform-Design-Brief.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_sprint2_schema.py  0003_opportunities_schema.py
app/: config.py  main.py
app/api/v1/: analysis.py  gsc.py  health.py  opportunities.py
app/db/: models.py  session.py
app/pipeline/: bottleneck.py  cache.py  collectors.py  confidence.py  ide_collector.py  ide_gates.py  ide_llm.py  ide_orchestrator.py  ide_scorer.py  orchestrator.py  readiness.py  summarizer.py  validation.py
app/providers/: registry.py
app/providers/base/: crawler.py  gsc.py  llm.py  search_data.py
app/providers/implementations/: anthropic.py  dataforseo.py  firecrawl.py  google_gsc.py
app/schemas/: opportunities.py  verdicts.py
app/worker/: celery_app.py
docs/: api-contracts.md  bottleneck-validation-plan.md  changelog.md  decisions.md  ide-implementation-design.md  intelligence-architecture.md  progress.md
docs/prompts/: bottleneck-v1.md  opportunity-v1.md  summarize-page-v1.md
docs/validation/: assumptions.md  evaluation-package.md  ide-validation-plan.md
tests/: test_confidence.py  test_firecrawl_provider.py  test_gsc_endpoint.py  test_health.py  test_ide_e2e.py  test_ide_gates.py  test_ide_scorer.py  test_pipeline_e2e.py  test_providers_base.py  test_registry.py  test_summarizer.py  test_validation.py
